# smooth-core

./: .dockerignore  .gitignore  API_ENDPOINTS.md  CHANGELOG.md  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  ROADMAP.md  cleanup.py  loobric.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: cla.yml
docs/: ARCHITECTURE.md  AUTHENTICATION.md  CLA.md  CLI.md  CONCEPTS.md  CONTRIBUTING.md  DEPLOYMENT.md  DESIGN_PHILOSOPHY.md  DEVELOPMENT.md  HOWTO_BUILD_A_CLIENT.md  HOWTO_BUILD_CAM_SET_FROM_MACHINE.md  HOWTO_MATCH_MACHINE_AND_CAM_TOOLS.md  HOWTO_MIRROR_MACHINE_TOOLS_TO_CAM.md  HOWTO_RECONCILE_MACHINE_AND_CAM_LIBRARY.md  M2_PLAN.md  MANUFACTURER_CATALOG.md  MIGRATIONS.md  QUICK_START.md  ROUNDTRIP.md  ROUNDTRIP_FIXES.md  TOOL_SCHEMA.md  UBIQUITOUS_LANGUAGE.md
docs/Archive/: DATA_MODEL.md  REBOOT.md  RESEARCH_3DP_ANALOG.md  RESEARCH_BRIEF.md
migrations/: add_tags_columns.py  add_tags_to_resources.py  remove_machine_id.py
scripts/: init_test_db.py
smooth/: audit.py  backup.py  binding.py  binding_v2.py  change_detection.py  config.py  logging_config.py  logging_utils.py  main.py  media_store.py  version.py  versioning.py
smooth/api/: _media.py  account.py  admin.py  audit_log_api.py  auth.py  backup_api.py  catalogs.py  changes_api.py  dependencies.py  inbox.py  instance_inbox.py  libraries.py  machine_records.py  machines.py  tool_assemblies.py  tool_catalog_records.py  tool_instance_records.py  tool_instances.py  tool_items.py  tool_presets.py  tool_records.py  tool_set_records.py  tool_sets.py  tool_table_entry_records.py  tool_usage.py  users.py
smooth/auth/: apikey.py  authorization.py  oauth2.py  password.py  user.py
smooth/contract/: __init__.py  models.py
smooth/database/: schema.py  session.py
smooth/migrations/: 0001_baseline.py  __init__.py  runner.py
smooth/models/: __init__.py
smooth/translators/: __init__.py
tests/: conftest.py  test_fixtures.py  test_hypothesis_examples.py
tests/contract/: conftest.py  test_account_api.py  test_backup_authz.py  test_facade_vocabulary.py  test_inbox_api.py  test_instance_inbox_api.py  test_libraries_api.py  test_loobric_coverage.py  test_machine_records_api.py  test_machines_api.py  test_media.py  test_requested_member_proposal_api.py  test_schema_contract.py  test_sectioned_delete_api.py  test_tool_catalog_records_api.py  test_tool_instance_records_api.py  test_tool_records_api.py  test_tool_set_records_api.py  test_tool_sets_api.py  test_tool_table_entry_records_api.py
tests/fixtures/: __init__.py  sample_data.py
tests/integration/: conftest.py  test_admin_list_users.py  test_admin_wipe.py  test_api_basic.py  test_audit_log_api.py  test_auth.py  test_changes_api.py  test_loobric_live.py  test_manufacturer_catalog.py  test_migrations.py  test_registration_security.py  test_roundtrip_loop.py  test_tag_enforcement.py  test_tool_assemblies_api.py  test_tool_instances_api.py  test_tool_instances_tag_enforcement.py  (+10 more)
(+20 files in other folders)
